--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <id>sonatype-oss-snapshots1</id>
             <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
         </repository>
+        <repository>
+            <id>dv8tion</id>
+            <name>m2-dv8tion</name>
+            <url>https://m2.dv8tion.net/releases</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -74,6 +79,11 @@
             <artifactId>JDA</artifactId>
             <version>5.0.0-beta.23</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sedmelluq</groupId>
+            <artifactId>lavaplayer</artifactId>
+            <version>1.3.77</version>
         </dependency>
         <dependency>
             <groupId>net.luckperms</groupId>
