--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,5 +3,5 @@ version: '${project.version}'
 main: com.pnternn.mcordsync.MCordSync
 api-version: '1.20'
 commands:
-  discord:
+  discord-esle:
     description: Link your Discord account to your Minecraft account
