--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,5 @@
 bot:
+  enabled: true #Only main server should have this enabled
   id: "CLIENT_ID"
   token: "BOT_TOKEN"
   secret: "CLIENT_SECRET"
@@ -15,7 +16,14 @@ roles:
     id: "ROLE_ID"
     permission: "mcordsync.role.0"
 
+redis:
+  enabled: true # if your server is a network, you should enable this
+  host: ""
+  port: 6379
+  channel: "mcordsync"
+  password: ""
 mysql:
+  enabled: true
   host: "127.0.0.1"
   port: 3306
   database: "DatabaseName"
@@ -23,14 +31,20 @@ mysql:
   username: "root"
   password: "password"
 
+sqlite: #Work In Progress
+  enabled: false
+  database: "DatabaseName"
+  table: "mcordsync"
+
+
 messages: #FORMATS https://docs.advntr.dev/minimessage/format.html
   playerMuted: "<color:#ACE2E1>PirateSkyblock <color:#008DDA>» <color:#F7EEDD>Sen susturuldun, susturulma bitmesine kalan süre: <color:#5764F1><time>"
   noPermission: "<color:#DD5746>You do not have permission to execute this command."
   noConsole: "<color:#DD5746>This command can only be executed by players."
   successfullySync: "<color:#ACE2E1>PirateSkyblock <color:#008DDA>» <color:#F7EEDD>Discord hesabınız bağlandı isminiz: <color:#5764F1><username>"
   successfullyUnsync: "<color:#ACE2E1>PirateSkyblock <color:#008DDA>» <color:#F7EEDD>link removed successfully"
-  alreadySynced: "<color:#ACE2E1>PirateSkyblock <color:#008DDA>» <color:#F7EEDD>Hesabın bağlı! Bağlantıyı kaldırmak için <color:#5764F1><click:run_command:/discord unlink>tıkla"
-  alreadyUnsynced: "<color:#ACE2E1>PirateSkyblock <color:#008DDA>» <color:#F7EEDD>Hesabın bağlı değil! Bağlamak için <color:#5764F1><click:run_command:/discord link>tıkla"
+  alreadySynced: "<color:#ACE2E1>PirateSkyblock <color:#008DDA>» <color:#F7EEDD>Hesabın bağlı! Bağlantıyı kaldırmak için <color:#5764F1><click:run_command:/discord-esle kaldir>tıkla"
+  alreadyUnsynced: "<color:#ACE2E1>PirateSkyblock <color:#008DDA>» <color:#F7EEDD>Hesabın bağlı değil! Bağlamak için <color:#5764F1><click:run_command:/discord-esle bagla>tıkla"
   syncMessage: "<color:#ACE2E1>PirateSkyblock <color:#008DDA>» <color:#F7EEDD>Discord hesabınızı bağlamak için <color:#5764F1><link>tıkla"
   reporterPlayerMessage: "<color:#ACE2E1>PirateSkyblock <color:#008DDA>» <color:#F7EEDD>Başarıyla raporlandı, rapora bakmak için <color:#5764F1><link>tıkla"
   reportedPlayerMessage: "<color:#ACE2E1>PirateSkyblock <color:#008DDA>» <color:#F7EEDD>Bir oyuncu seni raporladı, raporun detayları için <color:#5764F1><link>tıkla"
